packages/canary/src/styles.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: 'Inter';
  font-style: normal;
  font-weight: 300 600; /* Supports weights from 300 to 600 */
  src: url('/fonts/InterVariable.ttf') format('truetype');
}

:root {
  /* PP Figma shades */
  --black: 210 10% 3%;
  --grey-6: 210 8% 6%;
  --grey-8: 210 7% 8%;
  --grey-10: 210 6% 10%;
  --grey-12: 210 6% 12%;
  --grey-15: 210 6% 15%;
  --grey-20: 210 6% 20%;
  --grey-30: 210 6% 30%;
  --grey-40: 210 6% 40%;
  --grey-50: 210 6% 50%;
  --grey-60: 210 6% 60%;
  --grey-70: 210 6% 70%;
  --grey-80: 210 6% 80%;
  --grey-90: 210 6% 90%;
  --grey-94: 210 6% 94%;
  --grey-98: 210 6% 98%;
  --white: 0 0% 100%;

  /* PP Figma secondary colors */
  --mint: 175 60% 65%;
  --blue: 216 80% 65%;
  --orange: 35, 75%, 55%;
  --purple: 275 60% 75%;
  --green: 150, 75%, 65%, 0.7;
  --red: 0, 80%, 65%, 0.7;
}

@layer themes {
  /* TODO: replace hsl with variables for theming */
  :root {
    --background: 0 0% 100%;
    --foreground: 240 10% 3.9%;
    --card: 0 0% 100%;
    --card-foreground: 240 10% 3.9%;
    --popover: 0 0% 100%;
    --popover-foreground: 240 10% 3.9%;
    --primary: 240 5.9% 10%;
    --primary-background: 240 5.9% 10%;
    --primary-foreground: 0 0% 98%;
    --secondary: 240 4.8% 95.9%;
    --secondary-foreground: 240 5.9% 10%;
    --secondary-background: 0 0% 100%;
    --tertiary: 240 4.8% 95.9%;
    --tertiary-foreground: 240 5.9% 10%;
    --tertiary-background: 240 6% 60%;
    --muted: 240 4.8% 95.9%;
    --muted-foreground: 240 3.8% 46.1%;
    --accent: 240 4.8% 95.9%;
    --accent-foreground: 240 5.9% 10%;
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;
    --border: 240 5.9% 90%;
    --input: 240 5.9% 90%;
    --ring: 240 5.9% 10%;
    --radius: 0.5rem;
  }

  .dark {
    --background: var(--grey-6);
    --foreground: var(--grey-94);
    --card: var(--grey-10);
    --card-foreground: var(--white);
    --popover: var(--grey-10);
    --popover-foreground: var(--white);
    --primary: var(--white);
    --primary-background: var(--black);
    --primary-foreground: var(--grey-10);
    --secondary: var(--grey-15);
    --secondary-foreground: var(--white);
    --secondary-background: var(--grey-6);
    --tertiary: var(--grey-12);
    --tertiary-foreground: var(--white);
    --tertiary-background: var(--grey-60);
    --muted: var(--grey-15);
    --muted-foreground: var(--grey-60);
    --accent: var(--grey-15);
    --accent-foreground: var(--white);
    --destructive: var(--red);
    --destructive-foreground: var(--white);
    --border: var(--grey-15);
    --input: var(--grey-15);
    --ring: var(--grey-80);
    --success: var(--green);
    --error: var(--red);
    --warning: var(--orange);
    --ai: var(--purple);
  }
}

@layer base {
  * {
    @apply border-border;
  }

  html {
    @apply antialiased text-base;
  }

  body {
    @apply bg-background text-foreground text-sm font-normal;
  }
}

@layer utilities {
  /* TODO Check this – should not be necessary when the custom color has been defined in tailwind config already */
  .text-tertiary-background {
    color: hsl(var(--tertiary-background));
  }
}

/* Text utilities */
.title-primary {
  @apply text-neutral-300 text-3xl leading-relaxed;
}
.text-radial-gradient {
  @apply bg-gradient-radial from-[#CA9AF4]/70 to-[#CA9AF4]/0 bg-clip-text text-white/70;
}

.section-title {
  @apply text-3xl text-primary font-normal -tracking-[2%];
}

.section-title-small {
  @apply text-xl text-primary font-normal -tracking-[2%];
}

.section-description {
  @apply text-sm text-[#C9C9CF] font-light;
}

/* Card utilities */
.card-auth {
  @apply border-none w-[362px];
}
.card-auth-header {
  @apply p-0 space-x-0 space-y-0;
}
.card-auth-content {
  @apply py-6 w-full;
}

/* Form utilities */
.text-form-error {
  @apply font-light text-red-500 text-xs mt-2;
}
.form-input {
  @apply font-light text-sm w-full mt-1 border-white/10 bg-white/5 rounded-[4px];
  @apply placeholder:text-white/50 !important;
}

/* Navbar utilities */
.navbar-item svg {
  @apply w-3 h-3 text-tertiary-background opacity-80 ease-in-out duration-150 truncate;
}
.navbar-item.active svg,
.navbar-item:hover svg {
  @apply text-primary opacity-100 brightness-200 contrast-200 bg-gradient-radial from-primary/15 to-transparent;
}
.navbar-item p {
  @apply font-medium -tracking-[0.02em] text-tertiary-background ease-in-out duration-150 truncate;
}
.navbar-item.active p,
.navbar-item:hover p {
  @apply opacity-100 text-primary;
}

/* Navbar company badge */
[data-state='open'] .nav-company-badge-chevron {
  @apply transition-transform transform rotate-180;
}
.nav-company-badge-chevron {
  @apply transition-transform transform rotate-0;
}

/* Entity list actions */
.entity-list-action {
  @apply text-tertiary-background font-light text-xs outline-none select-none focus:ring-0 focus:outline-none;
}
[data-state='open'] .entity-list-action-chevron {
  @apply transition-transform transform rotate-180;
}
.entity-list-action-chevron {
  @apply transition-transform transform rotate-0 text-tertiary-background group-hover:text-primary;
}

/* Temporary studio controls override */
.react-flow__panel {
  @apply m-6 flex gap-[1px] left-auto right-0 !important;
}
.react-flow__controls-button {
  @apply invert rounded-md !important;
}

